// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDetail matches snapshot after item loads 1`] = `
<div>
  <div
    style="padding: 16px; max-width: 720px; margin: 0px auto;"
  >
    <a
      href="/"
      style="display: inline-block; margin-bottom: 16px; color: rgb(25, 118, 210); text-decoration: none;"
    >
      ← Back to items
    </a>
    <h2
      style="margin-bottom: 8px;"
    >
      Laptop Pro
    </h2>
    <p>
      <strong>
        Category:
      </strong>
       
      Electronics
    </p>
    <p>
      <strong>
        Price:
      </strong>
       $
      2499
    </p>
  </div>
</div>
`;

exports[`ItemDetail matches snapshot in error state 1`] = `
<div>
  <div
    style="padding: 16px; max-width: 720px; margin: 0px auto;"
  >
    <p
      role="alert"
      style="color: rgb(211, 47, 47);"
    >
      Item not found
    </p>
    <a
      href="/"
    >
      ← Back to items
    </a>
  </div>
</div>
`;

exports[`ItemDetail matches snapshot in loading state 1`] = `
<div>
  <div
    style="padding: 16px; max-width: 720px; margin: 0px auto;"
  >
    <div
      style="height: 24px; width: 200px; background: rgb(238, 238, 238); border-radius: 4px; margin-bottom: 12px;"
    />
    <div
      style="height: 16px; width: 140px; background: rgb(238, 238, 238); border-radius: 4px; margin-bottom: 8px;"
    />
    <div
      style="height: 16px; width: 100px; background: rgb(238, 238, 238); border-radius: 4px;"
    />
  </div>
</div>
`;
